--- a/src/components/section/assets/section.css
+++ b/src/components/section/assets/section.css
@@ -1,3 +1,24 @@
 .section {
-  
+  background-color: #fff;
+  padding: 4rem 0;
+}
+
+.section--hightlight {
+  background-color: #00bdbd;
+  color: #fff;
+} 
+
+.section__title {
+  text-align: center;
+  font-weight: 400;
+  margin: 0;
+  line-height: 1.7em;
+  font-size: 1.4rem;
+}
+
+.section__subtitle {
+  text-align: center;
+  font-weight: 300;
+  margin: 0;
+  line-height: 1.3em;
 }
