--- a/src/components/paragraph/assets/paragraph.css
+++ b/src/components/paragraph/assets/paragraph.css
@@ -2,6 +2,13 @@
   max-width: 75%;
   margin: 1.3em auto;
   box-sizing: border-box;
-  padding-right: 20%;
   line-height: 1.5em;
 } 
+
+@media (min-width: 640px) {
+
+  .paragraph {
+    padding-right: 20%;
+  }
+
+}
