--- a/src/components/header/assets/header.css
+++ b/src/components/header/assets/header.css
@@ -3,38 +3,38 @@
   color: #BBB;
   text-align: left;
   padding: 6rem 0;
-}
 
-.header__title {
-  color: #FBFAF9;
-  font-size: 3rem;
-  line-height: 1.3em;
-  font-weight: 300;
-  max-width: 75%;
-  margin: 5rem auto 0 auto;
-}
-
-.header__title--effect {
-  font-weight: 600;
-  color: #1DCA7F;
-}
-
-.header__subtitle {
-  font-size: 1rem;
-  font-weight: 300;
-  max-width: 75%;
-  margin: 0 auto;
-}
-
-@media (min-width: 640px) {
-
-  .header__title {
-    font-size: 5rem;
-    margin: 8rem auto 0 auto;
+  & .header__title {
+    color: #FBFAF9;
+    font-size: 3rem;
+    line-height: 1.3em;
+    font-weight: 300;
+    max-width: 75%;
+    margin: 5rem auto 0 auto;
   }
 
-  .header__subtitle {
-    font-size: 1.4rem;
+  & .header__title--effect {
+    font-weight: 600;
+    color: #1DCA7F;
   }
 
+  & .header__subtitle {
+    font-size: 1rem;
+    font-weight: 300;
+    max-width: 75%;
+    margin: 0 auto;
+  }
+
+  @media (--medium-viewport) {
+
+    & .header__title {
+      font-size: 5rem;
+      margin: 8rem auto 0 auto;
+    }
+
+    & .header__subtitle {
+      font-size: 1.4rem;
+    }
+
+  }
 }
